--- a/css/style2.css
+++ b/css/style2.css
@@ -31,11 +31,22 @@ body
     background-color: rgba(0, 0, 0, 0.65);
 }
 
+.modal-header h2, .modal-header h3
+{
+    margin: 0;
+}
+
+.modal-header
+{
+    background: coral;
+    padding: 15px;
+    color: #fff;
+}
+
 .modal-content
 {
     background-color: #f4f4f4;
-    margin: 20% auto;
-    padding: 20px;
+    margin: 10% auto;
     width: 70%;
     min-height: 12vh;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
@@ -43,11 +54,25 @@ body
     animation-duration: 1s;
 }
 
+.modal-body
+{
+    padding: 10px 20px;
+}
+
+.modal-footer
+{
+    background: coral;
+    padding: 10px;
+    color: #fff;
+    text-align: center;
+}
+
 .closeBtn
 {
     color: #ccc;
     float: right;
     font-size: 30px;
+    color: #fff;
 }
 
 .closeBtn:hover, .closeBtn:focus
